--- a/src/styles/sections/Starter.scss
+++ b/src/styles/sections/Starter.scss
@@ -1,7 +1,7 @@
 @import '../../styles/utils/colors.scss';
 
 .main-container{
-    margin: 0 5%;
+    margin: 1% 5%;
     .container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
@@ -34,8 +34,9 @@
         }
     }
 }
-@media screen and (min-width:320px) and(max-width:768px) {
+@media screen and (min-width:320px) and(max-width:1100px) {
     .main-container{
+        
         .container{
             grid-template-columns: 1fr;
         }
