--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -1,4 +1,6 @@
 $lightFontColor: #5b595f;
 $blueColor:#410ba5;
 $pinkColor:#f32a8f;
-$headingColor:rgb(18,18,88)
+$headingColor:rgb(18,18,88);
+$backgroundOtherColor:#efe8ff;
+$logoBackground:#f32a8f33;
