--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,10 @@ body{
   max-width: 100vw !important;
   font-family: 'Raleway', sans-serif;
 }
+body::-webkit-scrollbar{
+  width: 10px;
+  background-color: white;
+}
+body::-webkit-scrollbar-thumb{
+  background-color: rgb(18, 18, 88);
+}
