add ids & scroll things

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,9 @@ body::-webkit-scrollbar{
 body::-webkit-scrollbar-thumb{
   background-color: rgb(18, 18, 88);
 }
+body{
+  overflow-x: hidden;
+}
+html{
+  scroll-behavior: smooth;
+}
