--- a/src/styles/sections/Why.scss
+++ b/src/styles/sections/Why.scss
@@ -59,7 +59,7 @@
             .video{
                 height: 18rem;
                 width: 100%;
-                background-image: url('../../assets/videoImage.jpg');
+                background-image: url('../../assets/415.jpg');
                 background-size: cover;
                 border-radius: 1rem;
                 display: flex;
