--- a/src/styles/components/BrandName.scss
+++ b/src/styles/components/BrandName.scss
@@ -1,10 +1,13 @@
 @import '../../styles/utils/colors.scss';
 
+.brandname.darktheme{
+    color: azure !important;
+}
 .brand{
     cursor: pointer;
     font-size: 1.4rem;
 
-    span{
+    .brandname{
         text-transform: uppercase;
         border: 1px solid #f50460;
         color: $blueColor;
