--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -3,4 +3,6 @@ $blueColor:#410ba5;
 $pinkColor:#f32a8f;
 $headingColor:rgb(18,18,88);
 $backgroundOtherColor:#efe8ff;
+$backgroundDarkColor2:rgb(77, 69, 69);;
 $logoBackground:#f32a8f33;
+$Pdarktheme:rgb(206, 194, 194)
