--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -4,5 +4,6 @@ $pinkColor:#f32a8f;
 $headingColor:rgb(18,18,88);
 $backgroundOtherColor:#efe8ff;
 $backgroundDarkColor2:rgb(77, 69, 69);
+$backgroundDarkColor1:rgb(36, 34, 34);
 $logoBackground:#f32a8f33;
 $Pdarktheme:rgb(206, 194, 194)
