define Blog layout darktheme

--- a/src/styles/sections/Blogs.scss
+++ b/src/styles/sections/Blogs.scss
@@ -1,5 +1,7 @@
 @import '../utils/colors.scss';
-
+.blog-container.darktheme{
+    background-color: $backgroundDarkColor1;
+}
 .blog-container{
     .container{
         margin: 0 5%;
