define Blogs layout & Blog component darktheme

--- a/src/styles/components/Blog.scss
+++ b/src/styles/components/Blog.scss
@@ -1,6 +1,18 @@
 @import '../utils/colors.scss';
-
-.blog-container{
+.blogg-container.darktheme{
+    background-color: #424046
+}
+.title.darktheme{
+    h3{
+        color: azure !important;
+    }
+}
+.subTitle.darktheme{
+    p{
+        color: $Pdarktheme !important;
+    }
+}
+.blogg-container{
     height:100%;
     width: 100%;
     background-color: white;
